Added comments to project files to explain functions. Reformatted with prettier. Added trigger to open UI during start.
